@@ -1,3 +1,4 @@
+2/2/11 center justification of bar charts
 2/2/11 revert to HorizontalAligner for aligning equation and molecules 
 2/2/11 horizontally align equation terms and molecule columns
 2/2/11 adjust box size and separation
